--- a/módulo1_html5/elements-format.html
+++ b/módulo1_html5/elements-format.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Elementos de formatação</h1>
     <p>
-        No HTML podemos escrever utilizando <b>negrito</b>,
-		<i>itálico</i> ou <b><i>ambos</i></b> para destacar partes de um texto.
+        No HTML podemos escrever utilizando <strong>negrito</strong>,
+		<em>italico</em> ou <b><i>ambos</i></b> para destacar partes de um texto.
     </p>
 </body>
 </html>
