um_pouco_mais_de_links

--- a/módulo1_html5/links.html
+++ b/módulo1_html5/links.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Trabalhando com links</h1>
+    <div>
+        <p>Navegue com links</p>
+        <a href="../módulo1_html5/imagens.html">Ir para a página de imagens</a>
+    </div>
 </body>
 </html>
