--- a/módulo3_javascript/teste.html
+++ b/módulo3_javascript/teste.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    <h1>teste</h1>
+    <h1>Utilizando js dentro do arquivo em html</h1>
+
+    <script src="./script1.js"></script>
 </body>
 </html>
