algumas_alteracoes_simples

--- a/módulo3_javascript/teste.html
+++ b/módulo3_javascript/teste.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Utilizando js dentro do arquivo em html</h1>
-
+    <p>posso adicionar quantos scripts quiser</p>
+    <script src="./teste.js"></script>
     <script src="./script1.js"></script>
 </body>
 </html>
