aprendendo_consolelog_e_window

--- a/módulo1_html5/links.html
+++ b/módulo1_html5/links.html
@@ -11,5 +11,6 @@
         <p>Navegue com links</p>
         <a href="../módulo1_html5/imagens.html">Ir para a página de imagens</a>
     </div>
+    <p>acessar a pagina do google</p>
 </body>
 </html>
