--- a/módulo3_javascript/exercicio01/index.html
+++ b/módulo3_javascript/exercicio01/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nativos do navegador</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Recursos nativos do navegador</h1>
-    <script src="index.js"></script>
+    <h1>EXERCÍCIO 01 - MODULO JS</h1>
+
+    <script src="exercicio01.js"></script>
 </body>
 </html>
